--- a/LabY/Makefile
+++ b/LabY/Makefile
@@ -1,3 +1,7 @@
 .PHONY: all
-all :
-	g++ -pthread test.cpp -o testing -std=c++11
+all :semaphore
+
+semaphore : semaphore.o
+	g++ -pthread semaphore.o -o sema4
+semaphore.o: semaphore.cpp
+	g++ -std=c++17 -c -pthread semaphore.cpp
