Add readme and fix files

--- a/LabY/Makefile
+++ b/LabY/Makefile
@@ -5,3 +5,7 @@ semaphore : semaphore.o
 	g++ -pthread semaphore.o -o sema4
 semaphore.o: semaphore.cpp
 	g++ -std=c++17 -c -pthread semaphore.cpp
+
+.PHONY: clean
+clean:
+	rm -f *.o sema4
